# ckb_sdk_test

./: .env.example  Cargo.toml  README.md
src/: lib.rs
tests/: chain_transfer_sighash.rs  test_deploy_xudt.rs
