[package]
name = "ckb_sdk_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ckb-sdk = "3.1.1"

[dev-dependencies]
ckb-hash = "0.115.0-rc2"
dotenv = "0.15.0"
secp256k1 = "0.24"
ckb-types = "0.115.0-rc2"
ckb-jsonrpc-types = "0.115.0-rc2"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
hex = "0.4"
ring = "0.17.3"
xudt-manager = {git = "https://github.com/xcshuan/xudt-manager.git"}

[lib]
name = "ckb_test"
path = "src/lib.rs"
